--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,12 @@
 .header{
   margin: 0;
-  min-height: 74px;
+  padding-bottom: 41px;
+  min-height: 33px;
   border: none;
   border-bottom: 1px solid #545454;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 @media  screen and (max-width: 640px) {
   .header{
