PR12 status messages

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__user-info/header__user-info.css);
 @import url(./blocks/header/__info-container/header__info-container.css);
+@import url(./blocks/header/__button/header__button.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__image/profile__image.css);
@@ -39,6 +40,8 @@
 @import url(./blocks/popup/__input-title/popup__input-title.css);
 @import url(./blocks/popup/__input-text/popup__input-text.css);
 @import url(./blocks/popup/__input-button/popup__input-button.css);
+@import url(./blocks/popup/__input-status/popup__input-status.css);
+@import url(./blocks/popup/__input-image/popup__input-image.css);
 
 @import url(./blocks/profile-popup/__input-specialty/profile-popup__input-specialty.css);
 
