--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -1,5 +1,5 @@
 .popup__content{
-    /* margin: 0 auto; */
+    margin: auto;
     max-width:470px;
     display: grid;
     grid-template-areas: 
@@ -7,6 +7,7 @@
       "c d";
     row-gap: 8px;
     z-index: 10;
+    margin-top: 195px;
   }
   @media screen and (max-width: 580px){
     .popup__content{
